[FAQ] Fix incorrect alignments

--- a/css/faq_mobile.css
+++ b/css/faq_mobile.css
@@ -1,6 +1,9 @@
 .error {
     width: 100%;
 }
+.eosd_files {
+    width: 100px;
+}
 #back {
     float: none;
 }
